feat: update order documentaion
