# src/controllers/order.controller.ts
@@ -44,43 +44,41 @@ export default {
 
   async findAll(req: IReqUser, res: Response) {
     try {
-      try {
-        const buildQuery = (filter: any) => {
-          let query: FilterQuery<TypeOrder> = {};
+      const buildQuery = (filter: any) => {
+        let query: FilterQuery<TypeOrder> = {};
 
-          if (filter.search) query.$text = { $search: filter.search };
+        if (filter.search) query.$text = { $search: filter.search };
 
-          return query;
-        };
+        return query;
+      };
 
-        const { limit = 10, page = 1, search } = req.query;
+      const { limit = 10, page = 1, search } = req.query;
 
-        const query = buildQuery({
-          search,
-        });
+      const query = buildQuery({
+        search,
+      });
 
-        const result = await OrderModel.find(query)
-          .limit(+limit)
-          .skip((+page - 1) * +limit)
-          .sort({ createdAt: -1 })
-          .lean()
-          .exec();
+      const result = await OrderModel.find(query)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
+        .sort({ createdAt: -1 })
+        .lean()
+        .exec();
 
-        const count = await OrderModel.countDocuments(query).exec();
-        response.pagination(
-          res,
-          result,
-          {
-            current: +page,
-            total: count,
-            totalPages: Math.ceil(count / +limit),
-          },
-          "Success get all orders"
-        );
-      } catch (error) {
-        response.error(res, error, "Failed find all orders");
-      }
-    } catch (error) {}
+      const count = await OrderModel.countDocuments(query).exec();
+      response.pagination(
+        res,
+        result,
+        {
+          current: +page,
+          total: count,
+          totalPages: Math.ceil(count / +limit),
+        },
+        "Success get all orders"
+      );
+    } catch (error) {
+      response.error(res, error, "Failed find all orders");
+    }
   },
 
   async findOne(req: IReqUser, res: Response) {
@@ -96,14 +94,54 @@ export default {
     }
   },
 
-  async findAllByMember(req: IReqUser, res: Response) {},
+  async findAllByMember(req: IReqUser, res: Response) {
+    try {
+      const buildQuery = (filter: any) => {
+        const userId = req.user?.id;
+        let query: FilterQuery<TypeOrder> = {
+          createdBy: userId,
+        };
+
+        if (filter.search) query.$text = { $search: filter.search };
+
+        return query;
+      };
+
+      const { limit = 10, page = 1, search } = req.query;
+
+      const query = buildQuery({
+        search,
+      });
+
+      const result = await OrderModel.find(query)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
+        .sort({ createdAt: -1 })
+        .lean()
+        .exec();
+
+      const count = await OrderModel.countDocuments(query).exec();
+      response.pagination(
+        res,
+        result,
+        {
+          current: +page,
+          total: count,
+          totalPages: Math.ceil(count / +limit),
+        },
+        "Success get all orders by member"
+      );
+    } catch (error) {
+      response.error(res, error, "Failed find all orders by member");
+    }
+  },
 
   async complete(req: IReqUser, res: Response) {
     try {
       const { orderId } = req.params;
       const userId = req.user?.id;
 
-      const order = await OrderModel.findById({ orderId, createdBy: userId });
+      const order = await OrderModel.findOne({ orderId, createdBy: userId });
 
       if (!order) return response.notFound(res, "Order not found");
 
@@ -154,6 +192,35 @@ export default {
 
   async pending(req: IReqUser, res: Response) {
     try {
+      const { orderId } = req.params;
+
+      const order = await OrderModel.findOne({ orderId });
+
+      if (!order) return response.notFound(res, "Order not found");
+
+      if (order.status == OrderStatus.COMPLETED)
+        return response.error(res, null, "This order has been completed");
+
+      if (order.status == OrderStatus.PENDING)
+        return response.error(
+          res,
+          null,
+          "This order currently in payment pending"
+        );
+
+      const result = await OrderModel.findOneAndUpdate(
+        {
+          orderId,
+        },
+        {
+          status: OrderStatus.PENDING,
+        },
+        {
+          new: true,
+        }
+      );
+
+      response.success(res, result, "Success to pending an order");
     } catch (error) {
       response.error(res, error, "Failed to pending an order");
     }
@@ -161,6 +228,31 @@ export default {
 
   async cancelled(req: IReqUser, res: Response) {
     try {
+      const { orderId } = req.params;
+
+      const order = await OrderModel.findOne({ orderId });
+
+      if (!order) return response.notFound(res, "Order not found");
+
+      if (order.status == OrderStatus.COMPLETED)
+        return response.error(res, null, "This order has been completed");
+
+      if (order.status == OrderStatus.CANCELLED)
+        return response.error(res, null, "This order has been cancelled");
+
+      const result = await OrderModel.findOneAndUpdate(
+        {
+          orderId,
+        },
+        {
+          status: OrderStatus.CANCELLED,
+        },
+        {
+          new: true,
+        }
+      );
+
+      response.success(res, result, "Success to cancelled an order");
     } catch (error) {
       response.error(res, error, "Failed to cancelled an order");
     }
